# project

./: Bubble_sort.cpp  LIBROSA.ipynb  bitwise operation  countdata  countdata.cpp  l1cacheshim.h  tem.html
Ripes/: CMakeLists.txt  L1CacheShim.cpp  L2CacheSim.cpp  L3CacheSim.cpp  cachesim.h  l1cacheshim.cpp  l1cacheshim.h  l2cache.cpp  l2cache.h  l2cacheshim.cpp  l2cacheshim.h  l2cachesim.cpp  l2cachesim.h  l3cachesim.h
Ripes/c_code/: Matrix_Multiplication.c
Ripes/c_test_code/: 1112  111261012_c_code_prob1_Matrix_Multiplication.c  HW2-PART-A_assembly_code.s
SBP LAB/: direction_vs_freq_analysis.py  model_20241007.ipynb  model_20241229.ipynb  model_20250120.ipynb
algorithm/: Bubble_sort.cpp  Counting_sort.cpp  DFS_BFS.cpp  Hanoi.cpp  Insert_sort.cpp  LCS.cpp  Maximum Submatrix.cpp  Pattern Matching.cpp  Selection_sort.cpp  discretization.cpp  find_root.cpp  good.cpp  link_list_DFS.cpp  merge_sort_linked_list.cpp  quick _sort.cpp  tree traversal.cpp
c_project/: Evaluate_expression.cpp  NYCU_GRADE.cpp  meteor crawler,py  stl_list_sort&erase.cpp  stl_vector_reverse.cpp
c_project/skill/: skill.xlsx  skill_crawler.py
data-structure/: Binary Tree.cpp  adjacency list.cpp  link list.cpp  segment tree.cpp  vector_adjacency_list.cpp
https:/zerojudge.tw/: string is a arr
post/: post_crawler.py
side-project/: To binary.cpp
statistic/: FP.r  bio_statistic_ch6.r
web/: README.md
web/operate_googlesheet/: README.md
